--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.10",
     "firebase": "^11.10.0",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.540.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
+    "recharts": "^3.1.2",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
