--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.46.1",
     "@tailwindcss/vite": "^4.1.10",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
